# news_agent

./: .gitignore  README.md  graph.py  pyproject.toml  requirements.txt  state.py
.github/workflows/: run.yml
config/: sources.yaml
main/: auto_run.py  run_fetch.py  run_fetch_async.py  run_final.py  run_graph.py
news_agent/nodes/: classify.py  fetch_async.py  summarize.py
news_agent/utils/: cache.py  logger.py
src/news_agent/: cli.py  graph.py
src/news_agent/nodes/: __init__.py  classify.py  dedup.py  fetch.py  fetch_async.py  report.py  send.py  summarize.py
src/news_agent/utils/: __init__.py  cleaner.py
tests/: test_config.py  test_env.py  test_news.py
