[project]
name = "news_agent"
version = "0.1.0"
description = "AI-powered news digest agent using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0.0",  # 👈 加上这一行！永久锁死 1.x！因为和chromadb0.5.5会冲突
    "langgraph==1.1.10",
    "feedparser==6.0.12",
    "aiohttp==3.13.5",
    "sentence-transformers==3.0.1",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.3",
    "django-scheduler>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv特定配置
dev-dependencies = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "black==24.4.2",
]
