[project]
name = "news_agent"
version = "0.1.0"
description = "AI-powered news digest agent using LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Core AI/ML dependencies
    "langgraph==1.1.10",
    "sentence-transformers==3.0.1",
    "chromadb==0.5.5",  # 👈 必须加！和 numpy<2.0.0 兼容
    "openai==2.30.0",   # 👈 必须加！你的项目需要
    # Data fetching & parsing
    "feedparser==6.0.12",
    "aiohttp==3.13.5",
    # Configuration & utilities
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.3",
    "numpy<2.0.0",  # 👈 永久锁死 1.x！避免与 chromadb 0.5.5 冲突
    "Scheduler==1.2.1",
    "django-scheduler>=0.12.0",
    "pytz>=2026.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "black==24.4.2",
    "ruff==0.8.0",      # 👈 推荐：比 black 更快的代码格式化
    "mypy==1.15.0",     # 👈 推荐：类型检查
]
